@@ -1,3 +1,10 @@
+2014-12-28  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/GSSocketStream.m: Add necessary GSTLSHandler methods when
+	TLS is disabled.
+	* Source/GSTLS.m (standardizedPath): Define private function only
+	when TLS is enabled.
+
 2014-12-23  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSTimeZone.m:
